--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="container">
             
             <div class="menu_bg">
-              <a href="index.html" class="logo"><img src="images/logo4.png" alt=""></a>
+              <a href="index.html" class="logo"><img src="images/logo.png" alt="" style="padding: 25px;"></a>
 
               <!-- - - - - - - - - - - - - - Navigation - - - - - - - - - - - - - - - - -->
 
